[package]
name = "calibre-web-helper"
version = "0.1.2"
authors = ["ScottESanDiego"]
edition = "2024"
rust-version = "1.85"  # Minimum supported Rust version (required for 2024 edition)
description = "A helper tool for managing Calibre and Calibre-Web libraries"
license = "MIT"
repository = "https://github.com/ScottESanDiego/Calibre-Web-Helper"
categories = ["command-line-utilities"]
keywords = ["calibre", "ebook", "epub", "library", "metadata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["chrono", "uuid", "functions", "bundled"] }
epub = "2.1.0"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = "1.0.82"
slug = "0.1.5"
xml-rs = "0.8"
walkdir = "2.5.0"
