[package]
name = "calibre-web-helper"
version = "0.2.1"
authors = ["ScottESanDiego"]
edition = "2024"
rust-version = "1.94"
description = "A helper tool for managing Calibre and Calibre-Web libraries"
license = "MIT"
repository = "https://github.com/ScottESanDiego/Calibre-Web-Helper"
categories = ["command-line-utilities"]
keywords = ["calibre", "ebook", "epub", "library", "metadata"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.39.0", features = ["chrono", "uuid", "functions", "bundled"] }
epub = "2.1.5"
clap = { version = "4.6.0", features = ["derive"] }
chrono = "0.4.44"
uuid = { version = "1.23.0", features = ["v4"] }
anyhow = "1.0.102"
walkdir = "2.5.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
sha1 = "0.11.0"
regex = "1.12.3"
